fixing spacing in ourteam page

--- a/src/App.css
+++ b/src/App.css
@@ -5,7 +5,7 @@ h1 {
 
 h2 {
   letter-spacing: .12rem;
-  margin: 2rem 0;
+  margin: 2rem 0 0.5rem 0;
 }
 
 /* Mission Statement */
